--- a/parallax website/index.html
+++ b/parallax website/index.html
@@ -35,7 +35,7 @@
     <section class="section section-dark">
         <h2>Web Developer</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus repellat molestiae ducimus. Nam consectetur impedit placeat nisi, voluptas commodi labore debitis sunt necessitatibus qui sint quos aut libero aliquam perferendis optio magni quidem fugiat, est perspiciatis, facere amet harum et? Commodi placeat inventore, tempore quidem praesentium nihil! Mollitia, officia repudiandae!
+            As an experienced web developer, I specialize in utilizing a range of technologies to create dynamic and engaging websites. Proficient in JavaScript, HTML, and CSS, I employ these foundational languages to craft interactive and visually appealing user interfaces. Leveraging the power of Node.js, I develop scalable and efficient server-side applications. With expertise in React and Next.js, I build robust and responsive web applications, providing seamless user experiences across various devices. Additionally, I have hands-on experience with Three.js, enabling me to create captivating 3D graphics and immersive visual effects. Utilizing Git version control and GitHub, I ensure smooth collaboration and efficient project management. Furthermore, I am proficient in managing hosting environments, utilizing cPanel to deploy websites and configure server settings. My preferred development environment is VS Code, where I leverage its powerful features and extensions to streamline my workflow and enhance productivity. By combining these skills and technologies, I have successfully delivered numerous web projects that exceed client expectations.
         </p>
         </section>
 
@@ -48,9 +48,9 @@
         </div>
 
         <section class="section section-light">
-            <h2>Section Three</h2>
+            <h2>cloud Hosting from AWS and AZURE</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus repellat molestiae ducimus. Nam consectetur impedit placeat nisi, voluptas commodi labore debitis sunt necessitatibus qui sint quos aut libero aliquam perferendis optio magni quidem fugiat, est perspiciatis, facere amet harum et? Commodi placeat inventore, tempore quidem praesentium nihil! Mollitia, officia repudiandae!
+                With in-depth knowledge of AWS and Microsoft Azure, I have successfully designed and implemented scalable and secure cloud infrastructures. Proficient in Linux, PowerShell, Bash, and command-line interfaces (CLI), I leverage these tools to automate tasks and optimize cloud operations. Furthermore, my experience in DevSecOps and DevOps enables me to integrate security practices seamlessly into the software development lifecycle, ensuring robust protection of cloud resources and applications. I am well-versed in CI/CD (Continuous Integration/Continuous Deployment) methodologies, enabling smooth and efficient software delivery. In addition, I possess a comprehensive understanding of SaaS, PaaS, and IaaS models, allowing me to select the most suitable cloud solutions for specific business needs. Moreover, I hold the CompTIA Cloud Essentials+ certification, which validates my expertise in cloud computing concepts and best practices. Furthermore, I have completed the University Academy 92 Cloud and Cybersecurity Bootcamp, equipping me with advanced skills in cloud and cybersecurity. I am passionate about leveraging cutting-edge technologies and industry best practices to drive innovation and secure cloud environments. 
             </p>
             </section>
 
