--- a/parallax website/index.html
+++ b/parallax website/index.html
@@ -58,7 +58,7 @@
             <div class="pimg1">
                 <div class="ptext">
                     <span class="border">
-                        Parallax Website
+                        @TadyPi
                     </span>
                 </div>
             </div>
