Commit made from VS Code Azure Static Web Apps

--- a/parallax website/index.html
+++ b/parallax website/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallax Website</title>
+    <title>H Dyson Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="pimg1">
         <div class="ptext">
             <span class="border" style="border-radius: 5px";>
-                Google UX Design, Cloud and Web Development
+                Google UX Design<br> Cloud and Web Development
             </span>
         </div>
     </div> 
@@ -26,7 +26,7 @@
 
     <div class="pimg2">
         <div class="ptext">
-            <span class="border trans">
+            <span class="border trans" style="color: rgb(44, 196, 77)">
                 Node.js Developer 
             </span>
         </div>
@@ -48,9 +48,9 @@
         </div>
 
         <section class="section section-light">
-            <h2>Section Three</h2>
+            <h2>cloud and cybersecurity</h2>
             <p>
-                As a skilled professional in cloud and cybersecurity, I i  i bring a wealth of experience in working with various cloud services and products. With in-depth knowledge of AWS and Microsoft Azure, I have successfully designed and implemented scalable and secure cloud infrastructures. Proficient in Linux, PowerShell, Bash, and command-line interfaces (CLI), I leverage these tools to automate tasks and optimize cloud operations. Furthermore, my experience in DevSecOps and DevOps enables me to integrate security practices seamlessly into the software development lifecycle, ensuring robust protection of cloud resources and applications. I am well-versed in CI/CD (Continuous Integration/Continuous Deployment) methodologies, enabling smooth and efficient software delivery. In addition, I possess a comprehensive understanding of SaaS, PaaS, and IaaS models, allowing me to select the most suitable cloud solutions for specific business needs. Moreover, I hold the CompTIA Cloud Essentials+ certification, which validates my expertise in cloud computing concepts and best practices. Furthermore, I have completed the University Academy 92 Cloud and Cybersecurity Bootcamp, equipping me with advanced skills in cloud and cybersecurity. I am passionate about leveraging cutting-edge technologies and industry best practices to drive innovation and secure cloud environments. I am excited to contribute my cloud and cybersecurity expertise to your organization.
+                With knowledge of cloud and cybersecurity, I bring a wealth of experience in working with various cloud services and products. With in-depth knowledge of AWS and Microsoft Azure, I have successfully designed and implemented scalable and secure cloud infrastructures. Proficient in Linux, PowerShell, Bash, and command-line interfaces (CLI), I leverage these tools to automate tasks and optimize cloud operations. Furthermore, my experience in DevSecOps and DevOps enables me to integrate security practices seamlessly into the software development lifecycle, ensuring robust protection of cloud resources and applications. I am well-versed in CI/CD (Continuous Integration/Continuous Deployment) methodologies, enabling smooth and efficient software delivery. In addition, I possess a comprehensive understanding of SaaS, PaaS, and IaaS models, allowing me to select the most suitable cloud solutions for specific business needs. Moreover, I hold the CompTIA Cloud Essentials+ certification, which validates my expertise in cloud computing concepts and best practices. Furthermore, I have completed the University Academy 92 Cloud and Cybersecurity Bootcamp, equipping me with advanced skills in cloud and cybersecurity. I am passionate about leveraging cutting-edge technologies and industry best practices to drive innovation and secure cloud environments. I am excited to contribute my cloud and cybersecurity expertise to your organization.
             </p>
             </section>
 
@@ -58,7 +58,7 @@
             <div class="pimg1">
                 <div class="ptext">
                     <span class="border">
-                        Parallax Website
+                        H Dyson Portfolio
                     </span>
                 </div>
             </div>
