--- a/parallax website/index.html
+++ b/parallax website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallax Website</title>
+    <title>portfolio </title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -58,7 +58,7 @@
             <div class="pimg1">
                 <div class="ptext">
                     <span class="border">
-                        Parallax Website
+                        H Dyson
                     </span>
                 </div>
             </div>
